[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "russian-threadlette"
authors = [
  {name = "Rikus Honey", email = "rikushoney2@gmail.com"},
]
description = "A deadly game of threading."
readme = "README.md"
license = "MIT"
version = "0.1.0"
requires-python = ">= 3.12"

[project.urls]
Homepage = "https://github.com/rikushoney/russian-pythreadlette"
Repository = "https://github.com/rikushoney/russian-pythreadlette.git"
